# SEC-C

./: CMakeLists.txt  Camera.cpp  Camera.h  EBO.cpp  EBO.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  README.md  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  assimp.cpp  depthMapFragmentShader.glsl  fragmentShader.glsl  glad.c  glassFragmentShader.glsl  main  main.cpp  makefile  oldmain.cpp  simpleFragmentDepthShader.glsl  vertexShader.glsl
Models/floor/: floor.mtl
Models/floor/concrete_tiles_02_4k.blend/: concrete_tiles_02_4k.blend
Models/floor/concrete_tiles_02_4k.blend/textures/: concrete_tiles_02_rough_4k.exr
Models/floor/concrete_wall_004_2k.blend/: concrete_wall_004_2k.blend
Models/glass/: glass.glb  glass.mtl  railings.mtl
Models/glass/denmin_fabric_02_2k.blend/: denmin_fabric_02_2k.blend
Models/glass/rosewood_veneer1_2k.blend/: rosewood_veneer1_2k.blend
Models/glass/rosewood_veneer1_2k.blend/textures/: rosewood_veneer1_nor_gl_2k.exr  rosewood_veneer1_rough_2k.exr
Models/misc/: dividers.mtl
Models/seats/: seatCubical.mtl  seatRound.mtl  seatSquare.mtl
Models/skybox/: skybox.mtl
Models/table/: Poliigon_StoneQuartzite_8060_BaseColor.jpgZone.Identifier  metal_plate_02_diff_4k.jpgZone.Identifier  round_table.mtl
Models/tables/: tableCircular.mtl  tableLong.mtl  tableOval.mtl
Models/walls/: walls.mtl
